--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,14 @@
   grid-template-areas:
     'header header header'
     'aside main main';
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
+  /* color: white;
+  background-color: black; */
 }
 
 .App header {
   grid-area: header;
-}
-
-.App aside {
-  grid-area: aside;
 }
 
 .App main {
